--- a/views/css/cadasterProduto.css
+++ b/views/css/cadasterProduto.css
@@ -9,10 +9,12 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    transition: opacity 0.5s ease, transform 0.5s ease; /* Adicionando uma transição suave para opacidade e transform */
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    /* Adicionando uma transição suave para opacidade e transform */
     border-radius: 10px;
     box-shadow: 3px 9px 24px 0px rgba(0, 0, 0, 0.35);
-    display: none; /* Inicialmente oculto */
+    display: none;
+    /* Inicialmente oculto */
     flex-direction: column;
     align-items: center;
 }
@@ -21,7 +23,8 @@
 .add-box.show {
     display: flex;
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1); /* Adicionando escala para um efeito de zoom */
+    transform: translate(-50%, -50%) scale(1);
+    /* Adicionando escala para um efeito de zoom */
 }
 
 .add-box h1 {
@@ -100,19 +103,19 @@
     font-weight: 500;
     color: #fff;
     background-color: #2f3061;
-   }
-   
-   .btn:hover {
+}
+
+.btn:hover {
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-   }
-   
-   .btn:active {
+}
+
+.btn:active {
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-   }
-   
-   .btn::after {
+}
+
+.btn::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -123,21 +126,19 @@
     left: 0;
     z-index: -1;
     transition: all .4s;
-   }
-   
-   .btn::after {
+}
+
+.btn::after {
     background-color: #2f3061;
-   }
-   
-   .btn:hover::after {
+}
+
+.btn:hover::after {
     transform: scaleX(1.3) scaleY(1.6);
     opacity: 0;
-   }
-  
-   #table_client td {
+}
+
+#table_client td {
     width: 100%;
     text-align: left;
     padding: 8px;
 }
-
-
