--- a/views/css/dashboard.css
+++ b/views/css/dashboard.css
@@ -22,16 +22,9 @@
   /* =============== Modo claro =============== */
   body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--white);
     color: var(--black1);
-    transition: background-color 1s ease; /* Transição suave de 1 segundo */
-  }
-
-  /* ===============body dark theme ===============*/
-  .bodyNoite {
-    background-color: var(--black1); /* Cor de fundo preto */
-    color: var(--white);
     transition: background-color 1s ease; /* Transição suave de 1 segundo */
   }
 
